# clinic

./: .gitignore  INTEGRATION_GUIDE.md
.kiro/steering/: product.md  rules.md  structure.md  tech.md
Flows/: 001_MainInboundFlow.json  1MainInboundFlow.json  2_GeneralInfoFlow.json  33_AuthenticatedPatientFlow.json  3_AuthenticatedPatientFlow.json  44_AgentTransferFlow.json  4_AgentTransferFlow.json  5_WhatsAppEntryFlow copy.json  5_WhatsAppEntryFlow.json  6_WebChatEntryFlow.json  77OK_AppointmentFlow.json  88OK_AfterContactWorkFlow.json  8_AfterContactWorkFlow.json  9_SupervisorMonitorFlow.json
agentic-engine/: .env.example  README.md  main.py  pyproject.toml
agentic-engine/diagnostic-agent/: __init__.py  agent.py  handler.py
agentic-engine/shared/: __init__.py  appsync_client.py  bedrock_client.py  dynamodb_client.py  opensearch_client.py
agentic-engine/summarization-agent/: __init__.py  agent.py  handler.py
clinical-frontend/: .env.local.example  BACKEND_SETUP_COMPLETE.md  DEPLOYMENT.md  index.html  package-lock.json  package.json  vite.config.ts
clinical-frontend/amplify/: README.md
clinical-frontend/amplify/auth/: resource.ts
clinical-frontend/amplify/data/: resource.ts
clinical-frontend/src/: App.css  App.tsx  main.tsx
clinical-frontend/src/components/: AgentDashboard.tsx  AuthExample.tsx  RiskBadge.tsx  (+8 more)
clinical-ingestion/: .gitignore  DEPLOYMENT.md  README.md  STACK_COMPLETE.md  cdk.json  package-lock.json  package.json  tsconfig.json
clinical-ingestion/lib/: bedrock-knowledge-base-stack.ts  clinical-ingestion-stack.ts  vector-search-stack.ts
(+37 files in other folders)
